# einfacher-Kalkulator-auf-Mikrocontroller

./: README.md
einfacher_Kalkulator_Arduino/: einfacher_Kalkulator_Arduino.ino
einfacher_Kalkulator_QtCreator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
einfacher_Kalkulator_QtCreator/einfacher_Kalkulator_QtCreator/: Backround.qrc  CMakeLists.txt  desktop.ini  main.cpp  mainwindow.h  ressourcen.qrc
